--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.1",
+    "scss": "^0.2.4",
     "swiper": "^11.1.1",
     "web-vitals": "^2.1.4"
   },
